--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <h2>一个向爱而生的人</h2>
 <main>
   <p>我是一个96年生的、自诩早熟于有自我向内深省的思考能力起，便以理性来指导自己的生活和闯荡自己的人生。
-    偶愿在感性的思绪里沉浸。部属师范大学公费师范生毕业已工作两年多的一位西安小姐姐</p>
+    偶愿在感性的思绪里沉浸。部属师范大学公费师范生毕业已工作两年多的一位西安小姐姐。</p>
 </main>
   <ul>
 <li><a href="http://www.zhihu.com">知乎</a></li>
