--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <h1>温筱的个人网站</h1>
+<img src="photo01.jpg" alt="我的封面照/生活照/第一张照片/大头照">
 <h2>一个向爱而生的人</h2>
 <main>
   <p>我是一个96年生的、自诩早熟于有自我向内深省的思考能力起，便以理性来指导自己的生活和闯荡自己的人生。
