--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <main>
   <p>我是一个96年生的、自诩早熟于有自我向内深省的思考能力起，便以理性来指导自己的生活和闯荡自己的人生。
     偶愿在感性的思绪里沉浸。</p>
-  <p>现实是一位部属师范大学公费师范生且毕业已工作两年多的西安小姐姐。</p>
-</main>
+  <p>现实是一位部属师范大学公费师范生且毕业已工作两年多的小姐姐。</p>
+  </main>
+<a href="http://www.zhihu.com">知乎首页</a>
   <ul>
 <li><a href="http://www.zhihu.com">知乎</a></li>
 </ul>
