--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     偶愿在感性的思绪里沉浸。</p>
   <p>现实是一位部属师范大学公费师范生且毕业已工作两年多的小姐姐。</p>
   </main>
-<a href="http://www.zhihu.com">知乎首页</a>
+<a href="footer">Jump to Bottom</a>
+<footer id="footer">Copyright Cat Photo App</footer>
+
   <ul>
 <li><a href="http://www.zhihu.com">知乎</a></li>
 </ul>
