--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     偶愿在感性的思绪里沉浸。</p>
   <p>现实是一位部属师范大学公费师范生且毕业已工作两年多的小姐姐。</p>
   </main>
-<a href="footer">Jump to Bottom</a>
+<a href="#footer">Jump to Bottom</a>
 <footer id="footer">Copyright Cat Photo App</footer>
 
   <ul>
