--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <a href="#footer">Jump to Bottom</a>
 <footer id="footer">Copyright Cat Photo App</footer>
 <p>View more <a target="_blank" href="http://www.zhihu.com">about me</a>!</p>
+<p>View more <a target="_blank" href="#">about me</a>!</p>
   <ul>
 <li><a href="http://www.zhihu.com">知乎</a></li>
 </ul>
